--- a/condmyapp/src/main/resources/application.properties
+++ b/condmyapp/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=condmyapp
+
+# Configuracao MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/cond_db?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+# JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Executar data.sql apos criar tabelas (necessario para MySQL)
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+spring.sql.init.platform=mysql
