--- a/condmyapp/src/main/resources/application.properties
+++ b/condmyapp/src/main/resources/application.properties
@@ -1,5 +1,17 @@
 spring.application.name=condmyapp
 
+spring.mvc.format.date-time=dd/MM/yyyy HH:mm:ss
+spring.mvc.format.date=dd/MM/yyyy
+spring.mvc.format.time=HH:mm:ss
+
+# ===== THYMELEAF =====
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.cache=false
+spring.thymeleaf.check-template-location=true
+
 # Configuracao MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/cond_db?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
@@ -8,7 +20,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 # JPA / Hibernate
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
 # Executar data.sql apos criar tabelas (necessario para MySQL)
