--- a/condmyapp/src/main/resources/application.properties
+++ b/condmyapp/src/main/resources/application.properties
@@ -22,6 +22,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 # JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.cache.type= simple
 
 # Executar data.sql apos criar tabelas (necessario para MySQL)
 spring.jpa.defer-datasource-initialization=true
